# Game-Src

./: .clangd  .gitignore  CMakeLists.txt  Makefile  README.md  Session.vim  compile_commands.json  save_file.csv  todo.txt  toolchain-WebAsm.cmake  toolchain-windows.cmake
.cache/clangd/index/: game.c.781155ED8CDA6B42.idx  game.h.8AD16DE6DDBFC5C5.idx  main.c.884228F047F15DA1.idx
.vim/: coc-settings.json
fonts/BlockMonoFont/: FAQ.txt
setup/: install.sh  packages_installed.lst
src/: game.c  game.h  main.c
temp/: Makefile
